feat: rework solved session save API around question chains
- Accept rootQuestion + followupQuestions with choiceId per item;
  server validates the followup chain and scores answers from DB
- Trim save response to sessionId only (front scores locally)
- Split implement roles (validator/scorer/appenders) and move
  layer models into presentation/service/implement dto packages
- Drop unused isRoot flag (derive root questions from choice links),
  SessionSource, ABANDONED status, and stale error codes
- Use ResponseEntity in controllers
- Add docs/API.md and docs/CONVENTION.md; update ARCHITECTURE/DOMAIN

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>